--- a/Bitrix24RestApiClient/BXRest.csproj
+++ b/Bitrix24RestApiClient/BXRest.csproj
@@ -17,7 +17,7 @@
 
 Это версия пригодна к использованию в продакшене, но учитывайте, что первое время будут периодически появляться брэйкинг чеинджис. Если Вам понравилась моя идея по созданию библиотеки, но нашли ошибку или не нашли нужную Вам фичу, то напишите, пожалуйста, мне по почте timergalin@gmail.com или в вайбер по номеру +79222404311 и я внесу правки.</Description>
     <PackageIconUrl />
-    <Nullable>enable</Nullable>
+    <Nullable>warnings</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
